修改image引用的BUG，并修改了AddButton的图片

--- a/sass/src/Tab/Panel.scss
+++ b/sass/src/Tab/Panel.scss
@@ -1,7 +1,7 @@
 .cnty-tab-add-button{
-  background :  url(image-path('Tab/Add.png'));
+  background :  url(image-path('Tab/Add', 'png'));
   cursor : pointer
 }
 .cnty-tab-add-button-over{
-  background-position : 0 -16px
+  background-position : 0 -32px
 }
