--- a/sass/src/Tree/DisableNodePlugin.scss
+++ b/sass/src/Tree/DisableNodePlugin.scss
@@ -1,4 +1,4 @@
-.cnty-tree-node-disabled .x-grid-cell {
+.sencha-ext-tree-node-disabled .x-grid-cell {
   -moz-opacity: 0.5;
   opacity:.5;
   filter: alpha(opacity=50);
