修改相关字体

--- a/sass/src/View/IconView.scss
+++ b/sass/src/View/IconView.scss
@@ -17,7 +17,7 @@
 
 .sencha-ext-view-iconview-text
 {
-  font: normal 12px tahoma,arial,verdana,sans-serif,宋体,微软雅黑;
+  font: normal 12px 宋体,微软雅黑,tahoma,arial,verdana,sans-serif;
   text-decoration: none;
   color:#ffffff;
   text-align: center;
